--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="./javascript/jquery-3.0.0.min.js" type="text/javascript">
 </script>
 
@@ -10,22 +10,14 @@
 </head>
 
 <body>
-    <form id="admin" action="./php/admin_panel.php" method="post" name="admin">
-        <button type="submit">Admin Panel</button>
-    </form><br>
+    <h1>Hackathon</h1><br>
 
-    <h1>Pokemon GO Map Servers</h1>
-    <br>
-    <br>
+    <h2>Test</h2>
 
-    <form id="pageForm" action="./permanent_servers.html" method="post"">
-        <input type="submit" value="Go to Permanent Servers" id="permButton">
-    </form>
-    
-    <br>
-    
-    <form id="pageForm" action="./temp_servers.html" method="post">
-        <input type="submit" value="Go to Temporary Servers." id="tempButton" disabled>
-    </form>
+    <div id="main">
+        <form id="pageForm" action="./nothing.html" method="post" name="pageForm">
+            <input type="submit" value="Form" id="fancyButton">
+        </form>
+    </div>
 </body>
 </html>
