--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <script src="./javascript/jquery-3.0.0.min.js" type="text/javascript">
-</script>
+    <script src="./javascript/jquery-3.0.0.min.js" type="text/javascript"></script>
+    <script src="javascript/bill.js" type="text/javascript"></script>
+    <script src="javascript/index.js" type="text/javascript"></script>
 
-    <title>GOMap Servers</title>
+    <title>Bill App</title>
 </head>
 
 <body>
-    <h1>Hackathon</h1><br>
-
+    <h1>Bill Payment</h1>
     <h2>Test</h2>
 
     <div id="main">
-        <form id="pageForm" action="./nothing.html" method="post" name="pageForm">
-            <input type="submit" value="Form" id="fancyButton">
-        </form>
+        Bill:
+        <div id="bill">
+
+        </div>
+        <button id="addButton">Add Items to Bill</button>
     </div>
 </body>
 </html>
