--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="./javascript/jquery-3.0.0.min.js" type="text/javascript">
 </script>
+    <script src="./javascript/index.js" type="text/javascript">
+</script>
+    <script src="./javascript/style.js" type="text/javascript">
+</script>
 
     <title>GOMap Servers</title>
 </head>
 
 <body>
-    <h1>Hackathon</h1><br>
+    <h1>Receipt Splitting</h1>
 
-    <h2>Test</h2>
+    <h2>Version 1.0</h2>
 
     <div id="main">
-        <form id="pageForm" action="./nothing.html" method="post" name="pageForm">
-            <input type="submit" value="Form" id="fancyButton">
-        </form>
+        
+        <label>Add</label>
+        <input type="text">
+        
     </div>
 </body>
 </html>
