That indent though

--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     
-    <script src="./javascript/jquery-3.0.0.min.js" type="text/javascript">
-</script>
-        <script src="./javascript/jquery-ui.min.js" type="text/javascript">
-</script>
-    <script src="./javascript/index.js" type="text/javascript">
-</script>
-    <script src="./javascript/style.js" type="text/javascript">
-</script>
-    <script src="javascript/index.js" type="text/javascript"></script>
-        <script src="javascript/bill.js" type="text/javascript"></script>
+    <script src="./javascript/jquery-3.0.0.min.js" type="text/javascript"></script>
+    <script src="./javascript/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="./javascript/style.js" type="text/javascript"></script>
+    <script src="./javascript/index.js" type="text/javascript"></script>
+    <script src="./javascript/bill.js" type="text/javascript"></script>
 
     <title>Bill App</title>
 </head>
-
 <body>
     <h1>Bill Payment</h1>
     <h2>Version 1.0</h2>
