--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="bill">
 
 
-        <button id="addButton">Add Items to Bill</button>
+        <button id="addButton" class="fancyButton">Add Items to Bill</button>
         
         
         </div>
