--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./javascript/style.js" type="text/javascript"></script>
     <script src="./javascript/bill.js" type="text/javascript"></script>
     <script src="./javascript/person.js" type="text/javascript"></script>
-    <script src="./javascript/billItem.js" type="text/javascript"></script>
+    <script src="javascript/item.js" type="text/javascript"></script>
     <script src="./javascript/index.js" type="text/javascript"></script>
 
     <title>Bill App</title>
