--- a/index.html
+++ b/index.html
@@ -31,18 +31,22 @@
                 <div id="peopleItems">
 
                 </div>
-                <label for="addPersonName">Person Name: <input type="text" id="addPersonName"></label>
-                <button id="addPersonButton" class="btn btn-success">+</button>
+                <div class="form-group">
+                    <label for="addPersonName">Person Name: <input type="text" class="form-control" id="addPersonName"></label>
+                    <button id="addPersonButton" class="btn btn-success">+</button>
+                </div>
             </div>
 
             <div id="bill">
                 <div id="billItems">
 
                 </div>
-                <label for="addItemName">Food Name: <input type="text" id="addItemName" placeholder="Name"></label>
-                <label for="addItemPrice">Price: <input type="text" id="addItemPrice" placeholder="Price"></label>
-                <label for="addItemPerson">Owner: <select id="addItemPerson"></select></label>
-                <button id="addItemButton" class="btn btn-success">+</button>
+                <div class="form-group">
+                    <label for="addItemName">Food Name: <input type="text" class="form-control" id="addItemName" placeholder="Name"></label>
+                    <label for="addItemPrice">Price: <input type="text" class="form-control" id="addItemPrice" placeholder="Price"></label>
+                    <label for="addItemPerson">Owner: <select class="form-control" id="addItemPerson"></select></label>
+                    <button id="addItemButton" class="btn btn-success">+</button>
+                </div>
             </div>
 
         </div>
