--- a/index.html
+++ b/index.html
@@ -26,29 +26,36 @@
         <h1>Bill Payment</h1>
         <h2>Version 1.0</h2>
 
-        <div id="main">
-            <div id="people">
-                <div id="peopleItems">
+        <div class="row">
+            <div class="col col-md-3">
+                <div id="people">
+                    <div id="peopleItems">
 
-                </div>
-                <div class="form-group">
-                    <label for="addPersonName">Person Name: <input type="text" class="form-control" id="addPersonName"></label>
-                    <button id="addPersonButton" class="btn btn-success">+</button>
-                </div>
-            </div>
-
-            <div id="bill">
-                <div id="billItems">
-
-                </div>
-                <div class="form-group">
-                    <label for="addItemName">Food Name: <input type="text" class="form-control" id="addItemName" placeholder="Name"></label>
-                    <label for="addItemPrice">Price: <input type="text" class="form-control" id="addItemPrice" placeholder="Price"></label>
-                    <label for="addItemPerson">Owner: <select class="form-control" id="addItemPerson"></select></label>
-                    <button id="addItemButton" class="btn btn-success">+</button>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="addPersonName" placeholder="Person Name">
+                            <span class="input-group-btn">
+                                <button id="addPersonButton" class="btn btn-success">+</button>
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
+            <div class="col col-md-9">
+                <div id="bill">
+                    <div id="billItems">
+
+                    </div>
+                    <div class="form-group">
+                        <label for="addItemName">Food Name: <input type="text" class="form-control" id="addItemName" placeholder="Name"></label>
+                        <label for="addItemPrice">Price: <input type="text" class="form-control" id="addItemPrice" placeholder="Price"></label>
+                        <label for="addItemPerson">Owner: <select class="form-control" id="addItemPerson"></select></label>
+                        <button id="addItemButton" class="btn btn-success">+</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
