--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col col-md-12">
+                <h3>Totals for Each Person</h3>
+                <div id="results">
+
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
