--- a/index.html
+++ b/index.html
@@ -48,10 +48,16 @@
                     <div id="billItems">
 
                     </div>
-                    <div class="form-group">
-                        <label for="addItemName">Food Name: <input type="text" class="form-control" id="addItemName" placeholder="Name"></label>
-                        <label for="addItemPrice">Price: <input type="text" class="form-control" id="addItemPrice" placeholder="Price"></label>
-                        <label for="addItemPerson">Owner: <select class="form-control" id="addItemPerson"></select></label>
+                    <div class="form-group form-inline">
+                        <label for="addItemName">Food Name:</label>
+                        <input type="text" class="form-control" id="addItemName" placeholder="Grilled Chicken">
+                        <label for="addItemPrice">Price:</label>
+                        <span class="input-group">
+                            <span class="input-group-addon">$</span>
+                            <input type="text" class="form-control" id="addItemPrice" placeholder="12.34">
+                        </span>
+                        <label for="addItemPerson">Owner:</label>
+                        <select class="form-control" id="addItemPerson"></select>
                         <button id="addItemButton" class="btn btn-success">+</button>
                     </div>
                 </div>
