--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
     <!-- JQuery -->
-    <script src="./javascript/jquery-3.0.0.min.js" type="text/javascript"></script>
-    <script src="./javascript/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/jquery-3.1.0.min.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/ui/1.12.0/jquery-ui.min.js" type="text/javascript"></script>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+
+    <!-- Custom elements -->
+    <link rel="stylesheet" href="./thirdparty/bootstrap-combobox.css">
+    <script src="./thirdparty/bootstrap-combobox.js" type="text/javascript"></script>
 
     <!-- Custom styles -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -65,7 +69,18 @@
         </div>
         <div class="row">
             <div class="col col-md-12">
-                <h3>Totals for Each Person</h3>
+                <h3>Final Bill:</h3>
+                <div class="form-inline">
+                    <label for="gratuityBox">Add Gratuity: </label>
+                    <select id="gratuityBox" class="combobox form-control">
+                        <option></option>
+                        <option value="10">10%</option>
+                        <option value="15">15%</option>
+                        <option value="20" selected>20%</option>
+                        <option value="25">25%</option>
+                        <option value="30">30%</option>
+                    </select>
+                </div>
                 <div id="results">
 
                 </div>
