Expecting a lobby list

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                        <label for="joinLobbyId">
-                            Lobby Id:
-                            <input type="text" class="form-control" id="joinLobbyId" placeholder="0">
-                        </label>
+                        <label for="joinLobbyId">Lobby Id:</label>
+                        <select id="joinLobbyId" class="combobox form-control">
+                            <option></option>
+                        </select>
                     </p>
                 </div>
                 <div class="modal-footer">
