--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <script src="./javascript/item.js" type="text/javascript"></script>
     <script src="./javascript/index.js" type="text/javascript"></script>
 
+    <!-- Mobile phones like to zoom. We don't like that. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
     <title>Bill App</title>
 </head>
 <body>
@@ -104,7 +107,7 @@
                     <h4 class="modal-title">Join Lobby...</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
+                    <div class="form-group" id="joinForm">
                         <label for="joinLobbyId">Lobby Id:</label>
                         <select id="joinLobbyId" class="combobox form-control">
                             <option></option>
