--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             </div>
         </div>
     </div>
+    <!-- Join lobby modal -->
     <div class="modal fade" id="joinModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -123,6 +124,7 @@
             </div>
         </div>
     </div>
+    <!-- Create lobby modal -->
     <div class="modal fade" id="createModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
