--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="./javascript/bill.js" type="text/javascript"></script>
     <script src="./javascript/person.js" type="text/javascript"></script>
     <script src="./javascript/item.js" type="text/javascript"></script>
+    <script src="./javascript/bill.js" type="text/javascript"></script>
     <script src="./javascript/index.js" type="text/javascript"></script>
 
     <!-- Mobile phones like to zoom. We don't like that. -->
