--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
     <!-- JQuery -->
@@ -21,11 +21,7 @@
     <script src="./javascript/bill.js" type="text/javascript"></script>
     <script src="./javascript/person.js" type="text/javascript"></script>
     <script src="./javascript/item.js" type="text/javascript"></script>
-    <script src="./javascript/lobby.js" type="text/javascript"></script>
     <script src="./javascript/index.js" type="text/javascript"></script>
-
-    <!-- Mobile phones like to zoom. We don't like that. -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Bill App</title>
 </head>
@@ -97,52 +93,6 @@
                     <div id="personResults">
 
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Join lobby modal -->
-    <div class="modal fade" id="joinModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Join Lobby...</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group" id="joinForm">
-                        <label for="joinLobbyId">Lobby Id:</label>
-                        <select id="joinLobbyId" class="combobox form-control">
-                            <option></option>
-                        </select>
-                        <label for="joinLobbyPassword">Password:</label>
-                        <input type="password" class="form-control" id="joinLobbyPassword" placeholder="">
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn" id="showCreateLobbyButton">Create Lobby</button>
-                    <button type="button" class="btn btn-primary" id="joinLobbyButton">Join Lobby</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Create lobby modal -->
-    <div class="modal fade" id="createModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Create Lobby...</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="createLobbyName">Lobby Name:</label>
-                        <input type="text" class="form-control" id="createLobbyName" placeholder="Dinner at McGuffin's">
-                        <label for="createLobbyPassword">Password:</label>
-                        <input type="password" class="form-control" id="createLobbyPassword" placeholder="">
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn" id="showJoinLobbyButton">Join Lobby</button>
-                    <button type="button" class="btn btn-primary" id="createLobbyButton">Create Lobby</button>
                 </div>
             </div>
         </div>
